added new pages -iyan and moi moii

--- a/recipes/moimoi.html
+++ b/recipes/moimoi.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jollof Rice with Chicken and Dodo</title>
+    <title>Moi Moi</title>
 </head>
 <body>
  <header>
-    <h1>Naija Jollof Rice</h1>
+    <h1>Moi Moi</h1>
     <div>
-    <img src="images/jollof.jpg" alt="jollof rice" width="900px" height="534px">
+    <img src="images/moi-moi.jpg" alt="moi-moi">
+    <img src="images/MoiMoi.jpg" alt="a finish mmoi moi">
     </div>
  </header>
  <main>
@@ -40,7 +41,7 @@
         </article>
         <article>
             <h3>Rice</h3>
-            <img src="images/jollofchicken.jpg" alt="jollof rice and chicken" width="950px">
+            <img src="images/jollof.jpg" alt="jollof rice" width="450px">
             <ul>
                 <li>3 tablespoons vegetable oil</li>
                 <li>½ large onion, diced</li>
