--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <h1>Odin Recipes</h1>
     <h2>A PICK OF THE BEST NIGERIAN RICIPES THERE IS</h2>
     <img src="images/homeimg.jpg" alt="nigerian food">
-
-    <a href="recipes/jollof.html">Nigerian Jollof Rice</a>
+  <nav>
+    <ul>
+    <li><a href="recipes/jollof.html">Nigerian Jollof Rice</a></li>
+    <li><a href="recipes/iyan.html">Iyan and Efo Riro</a></li>
+    <li><a href="recipes/jollof.html">Moi Moi</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
