modify iyana and moi moi pages

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <h2>A PICK OF THE BEST NIGERIAN RICIPES THERE IS</h2>
+    <h2>Naija Food Hub</h2>
     <img src="images/homeimg.jpg" alt="nigerian food">
+    <h4>A PICK OF THE BEST NIGERIAN RICIPES THERE IS</h4>
   <nav>
     <ul>
     <li><a href="recipes/jollof.html">Nigerian Jollof Rice</a></li>
     <li><a href="recipes/iyan.html">Iyan and Efo Riro</a></li>
-    <li><a href="recipes/jollof.html">Moi Moi</a></li>
+    <li><a href="recipes/moimoi.html">Moi Moi</a></li>
     </ul>
   </nav>
 </body>
