--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -78,6 +78,9 @@
 
         <p>And your dellicious meal is ready</p>
     </section>
+    <footer>
+        <a href="https://www.allrecipes.com/recipe/259978/nigerian-jollof-rice-with-chicken-and-fried-plantains/" target="_blank"> REFERENCE</a>
+    </footer>
 
  </main>
  
