--- a/recipes/moimoi.html
+++ b/recipes/moimoi.html
@@ -10,75 +10,67 @@
  <header>
     <h1>Moi Moi</h1>
     <div>
-    <img src="images/moi-moi.jpg" alt="moi-moi">
-    <img src="images/MoiMoi.jpg" alt="a finish mmoi moi">
+    <img src="images/moi-moi.jpg" alt="moi-moi" width="920px" height="680px">
+    <img src="images/MoiMoi.jpg" alt="a finish moi moi" width="920px" height="680px">
     </div>
  </header>
  <main>
     <section>
-        <h3>A Tradition Nigerian Jollof Rice with Chicken and Fried Plantains</h3>
+        <h3>How to make Moin Moin/Moi Moi</h3>
         <p>
-            This traditional Nigerian dish brings out the best possible flavor of rice and chicken. Chicken is first sauteed on the stove top to produce a wonderful aromatic base for the rice. For an extra special and authentic touch, serve jollof rice with fried plantains.
+            Moi Moi/ Moin Moin is a traditional Nigerian meal made from beans, onions, peppers, spices, and other ingredients. It is delicious, easy to make, and inexpensive.
+        </p>
+        <P>
+            It is often served as lunch or dinner, and we reheat the leftover in the morning and use it as a side paired with pap or custard.
         </p>
     </section>
     <section>
         <h2>INGREDIENTS</h2>
-        <article>
-            <h3>Chicken</h3>
-            <img src="images/chicken.jpg" alt="a fried chicken" width="400px">
             <ul>
-                <li>2 pounds chicken drumsticks</li>
-                <li>½ large onion, diced</li>
-                <li>1 (2 inch) piece fresh ginger root, peeled and thinly sliced</li>
-                <li>2 cubes chicken bouillon, crushed</li>
-                <li>2 cloves garlic, diced</li>
-                <li>1 tablespoon curry powder, or more to taste</li>
-                <li>1 teaspoon herbes de Provence</li>
-                <li>freshly ground black pepper</li>
-                <li>1 pinch cayenne pepper</li>
-                <li>1 cup water</li>
+                <li><strong>Peas or Honey Beans</strong> -Best to use black-eyed peas or honey beans (Ewa oloyin)</li>
+                <li><strong>Black-eyed Peas or Honey Beans</strong> -Best to use black-eyed peas or honey beans (Ewa oloyin)</li>
+                <li><strong>Peppers</strong> -It's best to use a combination of peppers like red bell peppers (tatashe) and scotch bonnet(rodo) for a deeper flavor profile.</li>
+                <li><strong>Onion</strong> -Onions, as always, bring out the flavor in the food.</li>
+                <li><strong>Crayfish</strong> -you can ground the dry crayfish with the beans or use powdered crayfish.</li>
+                <li><strong>Vegetable Oil/Palm oil</strong> -You can use palm oil, vegetable oil, or a mixture. </li>
+                <li><strong>Chicken bouillon Cubes</strong> -Add this for taste.</li>
+                <li><strong>Fish</strong> -his is optional but a great addition. The fish is boiled and cut into chunks. I like to use Mackerel or Salmon.</li>
+                <li><strong>Hard-boiled Eggs</strong> -Also a great addition!</li>
+                <li><strong>Salt</strong> -Add salt to taste</li>
+                <li>1½ Cups dry beans Black eyed Peas or Brown Beans-”Ewa Oloyin”</li>
+                <li>1 Red Bell pepper/Tatashe Medium size</li>
+                <li>1 Habanero/scotch Bonnet/Rodo</li>
+                <li>¾ Cup Diced onion</li>
+                <li>2 Tablespoons Crayfish</li>
+                <li>¼ Cup Vegetable Oil</li>
+                <li>2 Bullion Cubes</li>
+                <li>¾ Cup cooked minced Fish</li>
+                <li>3 Hard boiled Eggs</li>
+                <li>Salt to taste</li>
             </ul>
-        </article>
-        <article>
-            <h3>Rice</h3>
-            <img src="images/jollof.jpg" alt="jollof rice" width="450px">
-            <ul>
-                <li>3 tablespoons vegetable oil</li>
-                <li>½ large onion, diced</li>
-                <li>1 (14 ounce) can tomato sauce</li>
-                <li>1 (14 ounce) can coconut milk</li>
-                <li>1 teaspoon herbes de Provence</li>
-                <li>1 teaspoon salt, or to taste</li>
-                <li>½ teaspoon ground black pepper, or to taste</li>
-                <li>3 cups parboiled rice (such as Uncle Ben's®)</li>
-                <li>1 (10 ounce) package frozen mixed vegetables (carrots, corn, peas)</li>
-            </ul>
-        </article>
-        <article>
-            <h3>Dodo (Plantains)</h3>
-            <img src="images/dodo.jpeg" alt="a fried plantains">
-            <img src="images/plantain.jpg" alt="a fried plantains" width="450" height="338px">
-            <ul>
-                <li>4 ripe plantains, peeled and cut diagonally into 1/2-inch slices</li>
-                <li>½ cup canola oil for frying</li>
-            </ul>
-        </article>
+        
     </section>
     <section>
         <h2>DIRECTIONS</h2>
         <ol>
-            <li>Place chicken drumsticks in a large Dutch oven over medium heat. Add 1/2 onion, ginger, crushed bouillon cubes, garlic, curry powder, 1 teaspoon herbes de Provence, black pepper, and cayenne pepper. Mix well. Cook until chicken starts sticking to the bottom, about 5 minutes. Pour in water, mix, cover the pot, and bring to a gentle simmer; cook for 15 minutes. Remove from heat.</li>
-            <li>Transfer chicken to a baking dish using a slotted spoon. Strain cooking liquid through a fine-mesh sieve. Reserve 1 1/2 cups liquid. Discard solids.
+            <li>Soak the Beans for 15 minutes depending on how dry your beans are. The drier beans tend to be ready for peeling faster than the less dried beans.</li>
+            <li> Pour the Beans in the Blender and add twice as much water as the Beans (by volume) blend the Beans for 3-4 seconds per time and repeat this 3 to 4 times - Remember we are peeling the beans and not blending them.</li>
+            <li>Pour the beans back into a large bowl and add enough water to fully cover the Beans. Now agitate the Beans with your fingers and the skin will float then quickly separate the skin from the Beans by pouring through a sieve.</li>
+            <li>Once that is done, pour the peeled Beans (the skinless Beans) inside a Blender, together with the Red Pepper, Habanero, and Onion - Blend to the smoothest consistency you can ever get.
             </li>
-            <li>Preheat oven to 400 degrees F (200 degrees C).</li>
-            <li>Bake chicken in the preheated oven until no longer pink in the middle and the juices run clear, about 30 minutes. An instant-read thermometer inserted into the thickest part should read 165 degrees F (74 degrees C).</li>
-            <li>Heat 3 tablespoons vegetable oil in a large pot over medium-low heat and cook 1/2 onion until soft and translucent but not browned, about 5 minutes. Add tomato sauce; cook and stir until slightly thickened and infused into the oil, 5 to 7 minutes.</li>
-            <li>Stir reserved chicken broth, coconut milk, 1 teaspoon herbes de Provence, salt, and pepper into the pot. Bring to a simmer; add rice. Cook, stirring often, until rice is almost tender, 15 to 20 minutes. Add frozen vegetables and continue cooking until rice is tender and creamy, about 5 minutes.</li>
-            <li>Heat 1/2 cup of canola oil in a nonstick pan over medium heat. Add plantains and fry on both sides until golden and crispy, about 2 to 3 minutes per side. Drain on paper towels. Garnish jollof rice with friend plantains and serve with chicken.</li>
+            <li>Combine the blended mixture with the remaining ingredients except for the boiled Eggs.</li>
+            <li>Spray or brush the container you will be using with oil. Pour the mixture into the container and place the boiled egg over it. Cover it with a lid or seal with foil paper.</li>
+            <li>Line the base of a large pot with either foil paper, sticks, leaves. Add enough water to the pot. (Add just enough not to submerge the moi moi bowls). This is to prevent the Moin moin from sticking to the base of the pot in case the water dries up before the moin moin gets done.</li>
+            <li>Arrange the Moin moin inside the Pot and cook till done. This should take about 45 minutes to 1 hour a little more or less depending on the quantity of the Moin moin mixture in each container.</li>
+            <li>To check for doneness, insert a toothpick into the middle of the Moin Moin/Moi. The toothpick should come out fairly clean and not wet.</li>
+            <li> Remove from heat and serve.</li>
         </ol>
 
         <p>And your dellicious meal is ready</p>
     </section>
+    <footer>
+        <a href="https://cheflolaskitchen.com/make-moin-moin-moi-moi/" target="_blank"> REFERENCE</a>
+    </footer>
 
  </main>
  
