home page style added

--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <h2>Naija Food Hub</h2>
+<body class="main">
+    <h3 id="odin">Odin Recipes</h1>
+    <header>
+    <hr>
+    <h1>Naija Food Hub</h1>
+    <hr>
+    </header>
+    <div class="image" class="hmimage">
     <img src="images/homeimg.jpg" alt="nigerian food">
-    <h4>A PICK OF THE BEST NIGERIAN RICIPES THERE IS</h4>
+    </div>
+    <h4 class="banner">A PICK OF THE BEST NIGERIAN RICIPES THERE IS</h4>
   <nav>
-    <ul>
-    <li><a href="recipes/jollof.html">Nigerian Jollof Rice</a></li>
-    <li><a href="recipes/iyan.html">Iyan and Efo Riro</a></li>
-    <li><a href="recipes/moimoi.html">Moi Moi</a></li>
+    <ul class="hmnav">
+    <li class="navjol"><a href="recipes/jollof.html">Nigerian Jollof Rice</a></li>
+    <li class="naviyan"><a href="recipes/iyan.html">Iyan and Efo Riro</a></li>
+    <li class="navmoi"><a href="recipes/moimoi.html">Moi Moi</a></li>
     </ul>
   </nav>
 </body>
