--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jollof Rice with Chicken and Dodo</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
  <header>
+    <h2 id="odin">Naija Food Hub</h2>
+    <hr>
     <h1>Naija Jollof Rice</h1>
-    <div>
+    <div class="hmimage">
     <img src="images/jollof.jpg" alt="jollof rice" width="900px" height="534px">
     </div>
  </header>
@@ -80,6 +83,10 @@
     </section>
     <footer>
         <a href="https://www.allrecipes.com/recipe/259978/nigerian-jollof-rice-with-chicken-and-fried-plantains/" target="_blank"> REFERENCE</a>
+        <a href="../index.html">Home</a>
+        <a href="./jollof.html">Jollof</a>
+        <a href="./moimoi.html">MoiMoi</a>
+        <a href="./iyan.html">Iyan</a>
     </footer>
 
  </main>
