--- a/recipes/moimoi.html
+++ b/recipes/moimoi.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moi Moi</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
  <header>
+    <h2 id="odin">Naija Food Hub</h2>
+    <hr>
     <h1>Moi Moi</h1>
-    <div>
+    <div class="hmimage">
     <img src="images/moi-moi.jpg" alt="moi-moi" width="920px" height="680px">
     <img src="images/MoiMoi.jpg" alt="a finish moi moi" width="920px" height="680px">
     </div>
@@ -70,6 +73,10 @@
     </section>
     <footer>
         <a href="https://cheflolaskitchen.com/make-moin-moin-moi-moi/" target="_blank"> REFERENCE</a>
+        <a href="../index.html">Home</a>
+        <a href="./jollof.html">Jollof</a>
+        <a href="./moimoi.html">MoiMoi</a>
+        <a href="./iyan.html">Iyan</a>
     </footer>
 
  </main>
