add style to pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Naija Food Hub</h1>
     <hr>
     </header>
-    <div class="image" class="hmimage">
+    <div class="image hmimage">
     <img src="images/homeimg.jpg" alt="nigerian food">
     </div>
     <h4 class="banner">A PICK OF THE BEST NIGERIAN RICIPES THERE IS</h4>
