--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -12,20 +12,20 @@
     <h2 id="odin">Naija Food Hub</h2>
     <hr>
     <h1>Naija Jollof Rice</h1>
-    <div class="hmimage">
-    <img src="images/jollof.jpg" alt="jollof rice" width="900px" height="534px">
+    <div class="image jolimage">
+    <img src="images/jollof.jpg" alt="jollof rice">
     </div>
  </header>
  <main>
     <section>
-        <h3>A Tradition Nigerian Jollof Rice with Chicken and Fried Plantains</h3>
-        <p>
+        <h3 class="banner">A Tradition Nigerian Jollof Rice with Chicken and Fried Plantains</h3>
+        <p class="details">
             This traditional Nigerian dish brings out the best possible flavor of rice and chicken. Chicken is first sauteed on the stove top to produce a wonderful aromatic base for the rice. For an extra special and authentic touch, serve jollof rice with fried plantains.
         </p>
     </section>
     <section>
-        <h2>INGREDIENTS</h2>
-        <article>
+        <h2 class="banner">INGREDIENTS</h2>
+        <article class="firstingre chicken">
             <h3>Chicken</h3>
             <img src="images/chicken.jpg" alt="a fried chicken" width="400px">
             <ul>
@@ -41,8 +41,8 @@
                 <li>1 cup water</li>
             </ul>
         </article>
-        <article>
-            <h3>Rice</h3>
+        <article class="firstingre rice">
+            <h3 class="fi">Rice</h3>
             <img src="images/jollofchicken.jpg" alt="jollof rice and chicken" width="950px">
             <ul>
                 <li>3 tablespoons vegetable oil</li>
@@ -56,7 +56,7 @@
                 <li>1 (10 ounce) package frozen mixed vegetables (carrots, corn, peas)</li>
             </ul>
         </article>
-        <article>
+        <article class="firstingre dodo">
             <h3>Dodo (Plantains)</h3>
             <img src="images/dodo.jpeg" alt="a fried plantains">
             <img src="images/plantain.jpg" alt="a fried plantains" width="450" height="338px">
@@ -66,8 +66,8 @@
             </ul>
         </article>
     </section>
-    <section>
-        <h2>DIRECTIONS</h2>
+    <section id="direction">
+        <h2 class="banner">DIRECTIONS</h2>
         <ol>
             <li>Place chicken drumsticks in a large Dutch oven over medium heat. Add 1/2 onion, ginger, crushed bouillon cubes, garlic, curry powder, 1 teaspoon herbes de Provence, black pepper, and cayenne pepper. Mix well. Cook until chicken starts sticking to the bottom, about 5 minutes. Pour in water, mix, cover the pot, and bring to a gentle simmer; cook for 15 minutes. Remove from heat.</li>
             <li>Transfer chicken to a baking dish using a slotted spoon. Strain cooking liquid through a fine-mesh sieve. Reserve 1 1/2 cups liquid. Discard solids.
@@ -79,14 +79,20 @@
             <li>Heat 1/2 cup of canola oil in a nonstick pan over medium heat. Add plantains and fry on both sides until golden and crispy, about 2 to 3 minutes per side. Drain on paper towels. Garnish jollof rice with friend plantains and serve with chicken.</li>
         </ol>
 
-        <p>And your dellicious meal is ready</p>
+        <p class="meal">And your dellicious meal is ready</p>
     </section>
+    <hr>
     <footer>
-        <a href="https://www.allrecipes.com/recipe/259978/nigerian-jollof-rice-with-chicken-and-fried-plantains/" target="_blank"> REFERENCE</a>
+        <div class="footer">
         <a href="../index.html">Home</a>
         <a href="./jollof.html">Jollof</a>
         <a href="./moimoi.html">MoiMoi</a>
         <a href="./iyan.html">Iyan</a>
+        </div>
+        <div class="ref">
+        <a href="https://www.allrecipes.com/recipe/259978/nigerian-jollof-rice-with-chicken-and-fried-plantains/" target="_blank"> Reference</a> 
+        <p>Design and coded by <a href="">mi okoro</a></p>
+        </div>
     </footer>
 
  </main>
