--- a/recipes/moimoi.html
+++ b/recipes/moimoi.html
@@ -12,23 +12,27 @@
     <h2 id="odin">Naija Food Hub</h2>
     <hr>
     <h1>Moi Moi</h1>
-    <div class="hmimage">
-    <img src="images/moi-moi.jpg" alt="moi-moi" width="920px" height="680px">
-    <img src="images/MoiMoi.jpg" alt="a finish moi moi" width="920px" height="680px">
+    <div class="image efoimage">
+    <img src="images/moi-moi.jpg" alt="moi-moi">
+    <img src="images/MoiMoi.jpg" alt="a finish moi moi">
     </div>
  </header>
  <main>
     <section>
-        <h3>How to make Moin Moin/Moi Moi</h3>
-        <p>
+        <h3 class="banner">How to make Moin Moin/Moi Moi</h3>
+        <p class="details">
             Moi Moi/ Moin Moin is a traditional Nigerian meal made from beans, onions, peppers, spices, and other ingredients. It is delicious, easy to make, and inexpensive.
         </p>
         <P>
             It is often served as lunch or dinner, and we reheat the leftover in the morning and use it as a side paired with pap or custard.
         </p>
     </section>
-    <section>
-        <h2>INGREDIENTS</h2>
+    <section id="moi-ingred">
+        <h2 class="banner">INGREDIENTS</h2>
+        <article class="firstingre">
+            <h3>Moi Moi</h3>
+        <img src="images/moi1.jpeg" alt="moi moi on a plate">
+        <img src="images/moi2.jpeg" alt="moi moi with fish">
             <ul>
                 <li><strong>Peas or Honey Beans</strong> -Best to use black-eyed peas or honey beans (Ewa oloyin)</li>
                 <li><strong>Black-eyed Peas or Honey Beans</strong> -Best to use black-eyed peas or honey beans (Ewa oloyin)</li>
@@ -40,21 +44,12 @@
                 <li><strong>Fish</strong> -his is optional but a great addition. The fish is boiled and cut into chunks. I like to use Mackerel or Salmon.</li>
                 <li><strong>Hard-boiled Eggs</strong> -Also a great addition!</li>
                 <li><strong>Salt</strong> -Add salt to taste</li>
-                <li>1½ Cups dry beans Black eyed Peas or Brown Beans-”Ewa Oloyin”</li>
-                <li>1 Red Bell pepper/Tatashe Medium size</li>
-                <li>1 Habanero/scotch Bonnet/Rodo</li>
-                <li>¾ Cup Diced onion</li>
-                <li>2 Tablespoons Crayfish</li>
-                <li>¼ Cup Vegetable Oil</li>
-                <li>2 Bullion Cubes</li>
-                <li>¾ Cup cooked minced Fish</li>
-                <li>3 Hard boiled Eggs</li>
-                <li>Salt to taste</li>
             </ul>
+        </article>
         
     </section>
-    <section>
-        <h2>DIRECTIONS</h2>
+    <section id="moidirect">
+        <h2 class="banner">DIRECTIONS</h2>
         <ol>
             <li>Soak the Beans for 15 minutes depending on how dry your beans are. The drier beans tend to be ready for peeling faster than the less dried beans.</li>
             <li> Pour the Beans in the Blender and add twice as much water as the Beans (by volume) blend the Beans for 3-4 seconds per time and repeat this 3 to 4 times - Remember we are peeling the beans and not blending them.</li>
@@ -69,14 +64,20 @@
             <li> Remove from heat and serve.</li>
         </ol>
 
-        <p>And your dellicious meal is ready</p>
+        <p class="meal">And your dellicious meal is ready</p>
     </section>
+    <hr>
     <footer>
-        <a href="https://cheflolaskitchen.com/make-moin-moin-moi-moi/" target="_blank"> REFERENCE</a>
+        <div class="footer">
         <a href="../index.html">Home</a>
         <a href="./jollof.html">Jollof</a>
         <a href="./moimoi.html">MoiMoi</a>
         <a href="./iyan.html">Iyan</a>
+        </div>
+        <div>
+        <a href="https://www.allrecipes.com/recipe/259978/nigerian-jollof-rice-with-chicken-and-fried-plantains/" target="_blank"> Reference</a> 
+        <p>Design and coded by <a href="">mi okoro</a></p>
+        </div>
     </footer>
 
  </main>
